@startuml

title __AUTH's Class Diagram__\n

  namespace ru.omegapps.wisherapp {
    namespace fragments {
      namespace auth {
        class ru.omegapps.wisherapp.fragments.auth.AuthorizatonFragment {
            ~ enterButton : Button
            ~ loginText : EditText
            ~ passText : EditText
            ~ regButton : Button
            - mAuth : FirebaseAuth
            + AuthorizatonFragment()
            + hideKeyboard()
            + onCreate()
            + onCreateView()
        }
      }
    }
  }
  

  namespace ru.omegapps.wisherapp {
    namespace fragments {
      namespace auth {
        class ru.omegapps.wisherapp.fragments.auth.RegistrationFragment {
            ~ loginText : EditText
            ~ mAuth : FirebaseAuth
            ~ passText : EditText
            ~ passText2 : EditText
            ~ registerButton : Button
            + RegistrationFragment()
            + hideKeyboard()
            + onCreate()
            + onCreateView()
        }
      }
    }
  }
  

  ru.omegapps.wisherapp.fragments.auth.AuthorizatonFragment -up-|> androidx.fragment.app.Fragment
  ru.omegapps.wisherapp.fragments.auth.RegistrationFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
